--- a/README.mkd
+++ b/README.mkd
@@ -1,6 +1,5 @@
-# This is pre-alpha quality
-
-taterm is a terminal emulator tailored to be used with tiling window managers.
+Taterm is a terminal emulator tailored to be used with tiling window managers.
+There may be special support for various window managers in the future.
 
 # Goals
 
