--- a/README.mkd
+++ b/README.mkd
@@ -15,6 +15,13 @@ There may be special support for various window managers in the future.
 
 * No tabbing (tiling window manager, remember?)
 
+# Features
+
+* Single instance, directory is taken from last focused terminal
+* Clicking of URIs
+* Scroll lock (WIP)
+* Clean build under latest GTK (3.3.18)
+
 ##LICENSE
 
 GPLv3
